fixed spacing issue

--- a/resources/scss/nav.scss
+++ b/resources/scss/nav.scss
@@ -93,7 +93,7 @@
 
     @include media-breakpoint-up(lg) {
         width: fit-content;
-        left: 90px;
+        left: 60px;
         bottom: -75px;
     }
 }
